Finally fixed the fucking panel spacing for the pros and cons lists.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
 .jumbotron{
   text-align: center;
+  margin-top: 50px
 }
 
 .headerimg{
   width: 75%;
   height: auto;
   float: center;
+  margin-top: 100px;
 }
 .dttky{
   width: 100%;
@@ -16,4 +18,15 @@
 
 .well h2 {
   text-align: center;
+}
+
+.panel-title{
+  padding-top: 15px;
+  padding-left: 15px;
+}
+
+}
+.float{
+  width: 5px;
+  align-self: center;
 }
